Fix ALL the tests